refactor: 💡 0.3.0 redesigned UI
Implement many UI changes

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Github trending plus | by zircle</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108782619-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-108782619-2');
+    </script>
   </head>
   <body>
     <div id="app"></div>
