feat: 🎸 beta ready

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Github trending plus | by zircle</title>
+    <meta name="keywords" content="experimental, zircle, zircle-ui, javascript, library, vuejs, zui, zoomable, user-interface, user-experience, circle, circular'">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>icons/favicon-16x16.png">
+    <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
+    <link rel="mask-icon" color="#5bbad5" href="<%= BASE_URL %>icons/safari-pinned-tab.svg">
+    <meta name="apple-mobile-web-app-title" content="Github trending plus">
+    <meta name="application-name" content="Github trending plus">
+    <meta name="msapplication-TileColo" content="#2d89ef">
+    <meta name="theme-color" content="#ffffff">
+    <title>Github trending plus by zircle</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108782619-2"></script>
     <script>
